--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,3 +21,14 @@
   margin: 16px;
   display: inline-block;
 }
+
+.drawer {
+  background-color: #cccccc;
+  overflow: hidden;
+  margin: 16px;
+  height: 0
+}
+
+.drawerContainer {
+  margin: 16px;
+}
