--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,8 +3,7 @@
   overflow-y: hidden;
   white-space: nowrap;
   height: auto;
-  margin-left: 32px;
-  margin-right: 32px;
+  margin: 32px;
   padding: 16px;
 }
 
@@ -23,7 +22,6 @@
 }
 
 .drawer {
-  background-color: #cccccc;
   overflow: hidden;
   margin: 16px;
   height: 0
@@ -31,4 +29,6 @@
 
 .drawerContainer {
   margin: 16px;
+  margin-left: 128px;
+  margin-right: 128px;
 }
